// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TextLink /> > should allow as override 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <p
    class="reset_blockText__1oah022d TextLink_root__5ax1bk0"
    rel="noopener noreferrer"
  >
    <span
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_link__1xnpmd7e useTextStyles_fontWeight_semiBold__1xnpmd7q useTextStyles_sizes_4__1xnpmd74 reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju3i sprinkles_position_relative_mobile__onxwju9m"
    >
      Test
    </span>
  </p>
</div>
`;

exports[`<TextLink /> > should match the snapshot 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <a
    class="reset_cursorPointer__1oah0222 reset_a__1oah022a TextLink_root__5ax1bk0"
    rel="noopener noreferrer"
  >
    <span
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_link__1xnpmd7e useTextStyles_fontWeight_semiBold__1xnpmd7q useTextStyles_sizes_4__1xnpmd74 reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju3i sprinkles_position_relative_mobile__onxwju9m"
    />
  </a>
</div>
`;
